# ancel-search-tool

./: CMakeLists.txt  README.md  SearchTool.vala  Test.vala
debian/: changelog  control  control~  copyright  rules
po/: CMakeLists.txt
src/: AncelSearchTool.vala  AncelSearchToolWindow.vala  OptionBox.vala  Result.vala  SearchEngine.vala  SearchTool.vala  config.vala
